[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/menus/ShopItem.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/objects/arena_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/objects/arena_actual.tres" type="DynamicFont" id=3]

[node name="ShopItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_right = 75.0
margin_bottom = 600.0

[node name="LabelName" type="Label" parent="VBoxContainer"]
margin_right = 71.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "name"

[node name="LabelDesc" type="Label" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 71.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
text = "desc"

[connection signal="mouse_entered" from="." to="." method="_on_ShopItem_mouse_entered"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
